--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@babel/plugin-transform-runtime": "^7.26.9",
     "@babel/preset-env": "^7.26.9",
     "@tailwindcss/vite": "^4.0.9",
+    "axios": "^1.8.1",
     "firebase": "^11.4.0",
+    "framer-motion": "^12.4.7",
+    "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.0.0",
