--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.26.9",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
+    "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.477.0",
